[package]
name = "bitseed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4.11", features = ["derive", "env"] }
ord-bitcoincore-rpc = "0.17.2"
bech32 = "0.9.1"
bip39 = "2.0.0"
ciborium = "0.2.1"
bitcoin = { version = "0.30.1", features = ["rand"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
tiny-keccak = { version = "2", features = ["keccak", "sha3"] }
anyhow = "1.0.62"
primitive-types = { version = "0.12.1", features = ["serde", "arbitrary"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
ord = { version = "0.15.0", git = "https://github.com/bitseed/ord", rev = "8d8d1979b6e548083b0902d40c64f68a53724faa"}
ordinals = { version = "0.0.2", git = "https://github.com/bitseed/ord", rev = "8d8d1979b6e548083b0902d40c64f68a53724faa"}
wasmer = "4.2.5"
once_cell = "1.19.0"

[dev-dependencies]
testcontainers = { version = "0.15.0" }